src/components/layout/PaymentsSection/styles.module.scss
@use "src/sass/abstracts";
@use "src/sass/common";

.payments-section {
    padding-block: 120px;
    padding-inline: 20px;
    max-width: 900px;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 20px;

    :global {
        h1.ant-typography {
            font-size: abstracts.$variables-font-lg;
        }

        .ant-picker {
            width: 100%;
        }

        .ant-btn {
            width: 100%;
            font-weight: 500;
            font-size: abstracts.$variables-font-sm;
            text-transform: uppercase;
        }
    }
}

.stat-cards {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
}

.chart-card {
    :global {
        .ant-card-head {
            background-color: rgba(abstracts.$variables-color-gray, 0.5);
        }

        .ant-card-body {
            padding: 0;

            @include abstracts.mixins-respond(md) {
                padding: 15px;
            }
        }
    }
}

.revenue-chart-container {
    height: 250px;
    width: 100%;

    @include abstracts.mixins-respond(sm) {
        width: 100%;
    }
}

